# RF-LEGO

./: .gitignore  README 2.md  README.md  pyproject.toml
rflego_beamformer/: dataset.py  generator.py  model.py  train.py
rflego_detector/: dataset.py  generator.py  model.py  train.py
rflego_ft/: dataset.py  generator.py  model.py  train.py
src/rflego/: __init__.py  config.py  utils.py
src/rflego/modules/: __init__.py  base.py  beamformer.py  detector.py  ft.py
src/rflego/trainer/: __init__.py  trainer.py
