[project]
name = "rflego"
version = "0.1.0"
description = "RF-LEGO: Lightweight, Efficient, Generalizable, and Optimized neural operators for RF signal processing"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Kong-To", email = "62915360+1ucayu@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = ["rf", "signal-processing", "deep-learning", "beamforming", "doa", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "loguru>=0.7.0",
    "tensorboard>=2.15.0",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/1ucayu/RF-LEGO"
Repository = "https://github.com/1ucayu/RF-LEGO"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rflego"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E741",  # ambiguous variable names (I, l, O) - common in signal processing
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict - handled by torch broadcasting
]

[tool.ruff.lint.isort]
known-first-party = ["rflego"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
